change screen support class standard

--- a/components.scss
+++ b/components.scss
@@ -2,7 +2,7 @@
     @each $screen-prefix, $sizes in get-screens-map($grid-flexbox-screens-support-skip-screens) {
         @media(min-width: get-screen-size($screen-prefix, min)) {
             @for $i from 1 through $grid-columns {
-                .#{$grid-column-class-prefix}-#{$screen-prefix}-#{$i} {
+                .#{$screen-prefix}-#{$grid-column-class-prefix}-#{$i} {
                     @include flex-basis(percentage($i/$grid-columns));
                     max-width: percentage($i/$grid-columns);
                 }
