--- a/components.scss
+++ b/components.scss
@@ -1,6 +1,18 @@
 .grid-flexbox {
     @each $screen-prefix, $sizes in get-screens-map($grid-flexbox-screens-support-skip-screens) {
         @media(min-width: get-screen-size($screen-prefix, min)) {
+            .#{$screen-prefix}-#{$grid-column-class-prefix}-auto {
+                @include flex(0, 0, auto);
+                width: auto;
+                max-width: 100%;
+            }
+
+            .#{$screen-prefix}-#{$grid-column-class-prefix}-stretch {
+                @include flex(1, 1, 0px);
+                width: auto;
+                max-width: 100%;
+            }
+            
             @for $i from 1 through $grid-columns {
                 .#{$screen-prefix}-#{$grid-column-class-prefix}-#{$i} {
                     @include flex-basis(percentage($i/$grid-columns));
